# TRACE-Deployment

./: Cargo.toml  README.md  index.yaml  requirements.txt
.github/workflows/: helmify.yaml
TRACE/: Chart.yaml
TRACE/charts/: camunda-platform-8.1.0.tgz  proving-service-0.1.0.tgz  sensor-data-service-0.1.1.tgz  verifier-service-0.1.0.tgz
camunda-service/: README.md  main.py
camunda-service/config/: settings.py
camunda-service/helm-chart/: Chart.yaml  values.yaml
camunda-service/models/: database.py  proofing_document.py  sensor_data.py
camunda-service/services/: database.py  logistics_operation_service.py  pcf_registry_service.py  proving_service.py  sensor_data_service.py  verifier_service.py
camunda-service/tasks/: worker_tasks.py
data/: Amazing Company 1.bpmn  Amazing Company 2.bpmn  Amazing Company 3.bpmn
data/bpmn/: tsp.bpmn  (+7 more)
docs/: setup-instructions.md  update-instructions.md
helm-chart/: Chart.yaml  values.yaml
k8s/: camunda-service.yaml
kafka-service/: README.md  kafka-values.yaml
scripts/: setup-subtrees.sh
services/: database.py  product_footprint.py  proving_service.py  sensor_data_service.py  verifier_service.py
src/: main.rs  receipt_verifier.proto
tasks/: worker_tasks.py
terraform/: .terraform.lock.hcl  aks-cluster.tf  helm-provider.tf
tests/: run_tests.py  test_kafka.py  test_worker_tasks.py
utils/: kafka.py
verifier-service/: Cargo.toml  Dockerfile  build.rs  rust-toolchain.toml
verifier-service/helm-chart/templates/: deployment.yaml
verifier-service/k8s/: verifier-service.yaml
verifier-service/src/: main.rs
(+44 files in other folders)
